--- a/Parse_bot/.env
+++ b/Parse_bot/.env
@@ -1,4 +1,4 @@
-BOT_TOKEN=7235872038:AAHASh7BmcohAvgDqzR6eFQZjxFhkEf_q5I
+BOT_TOKEN= bot father token
 
 MAX_DURATION_SECONDS=60
 MAX_FILE_SIZE_BYTES=12582912
@@ -7,4 +7,5 @@ CIRCLE_SIZE=640
 MIN_FILE_SIZE_BYTES=10240
 RETRY_DOWNLOAD_ATTEMPTS=2
 RETRY_SEND_ATTEMPTS=3
+
 SLEEP_BETWEEN_CHUNKS=2
