--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,9 @@ bs4 = "^0.0.2"
 shazamio = "^0.8.1"
 aiogram = "^3.22.0"
 python-decouple = "^3.8"
+scipy = "^1.11.0"
+Pillow = "^10.0.0"
+numpy = "^2.0.0"
 
 [build-system]
 requires = ["poetry-core"]
