--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,8 +9,8 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = ">=3.11.0,<3.13.0"
-yt-dlp = "^2025.9.26"
-youtube-dl = "^2021.12.17"
+yt-dlp = {git = "https://github.com/yt-dlp/yt-dlp.git"}
+
 requests = "^2.32.5"
 bs4 = "^0.0.2"
 shazamio = "^0.8.1"
